--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 /*--------------------------------------------------------------
-Theme Name: Premise
-Theme URI: https://demo.pressionate.com/premise
-Author: Pressionate
-Author URI: https://pressionate.com/
+Theme Name: Switch
+Theme URI: https://practice.monir.pro/switch
+Author: Monir
+Author URI: 
 Version: 1.0.0
 --------------------------------------------------------------*/
 
@@ -32,8 +32,8 @@ Version: 1.0.0
 /*--------------------------------------------------------------
 # Importing Fonts
 --------------------------------------------------------------*/
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,700');
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+/*@import url('https://fonts.googleapis.com/css?family=Open+Sans:300i,400,400i,600,700');*/
+/*@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');*/
 
 
 /*--------------------------------------------------------------
@@ -41,21 +41,21 @@ Version: 1.0.0
 --------------------------------------------------------------*/
 
 body {
-    color: #606060;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 25px;
+/*    color: #606060;*/
+/*    font-family: 'Source Sans Pro', sans-serif;*/
+/*    font-size: 15px;*/
+/*    font-weight: 400;*/
+/*    line-height: 25px;*/
 }
 
 button, 
 input, 
 select, 
 textarea {
-    color: #000;
-    font-family: 'Source Sans Pro', sans-serif;
-    font-size: 16px;
-    line-height: 20px;
+/*    color: #000;*/
+/*    font-family: 'Source Sans Pro', sans-serif;*/
+/*    font-size: 16px;*/
+/*    line-height: 20px;*/
 }
 
 h1, 
@@ -64,42 +64,42 @@ h3,
 h4, 
 h5, 
 h6 {
-    clear: both;
-    color: #3c3c3c;
-    font-family: 'Source Sans Pro', sans-serif;
+/*    clear: both;*/
+/*    color: #3c3c3c;*/
+/*    font-family: 'Source Sans Pro', sans-serif;*/
 }
 
 p {
-    margin-bottom: 15px;
-    font-size: 15px;
-    color: #606060;
-    line-height: 25px;
-    font-family: 'Roboto', sans-serif;
+/*    margin-bottom: 15px;*/
+/*    font-size: 15px;*/
+/*    color: #606060;*/
+/*    line-height: 25px;*/
+/*    font-family: 'Roboto', sans-serif;*/
 }
 
 ul {
-    margin: 0;
-    padding: 0;
+/*    margin: 0;*/
+/*    padding: 0;*/
 }
 
 li {
-    font-size: 15px;
-    font-family: 'Source Sans Pro', sans-serif;
+/*    font-size: 15px;*/
+/*    font-family: 'Source Sans Pro', sans-serif;*/
 }
 
 dfn, 
 cite, 
 em, 
 i {
-    font-style: italic;
+/*    font-style: italic;*/
 }
 
 blockquote {
-    margin: 0 15px;
+/*    margin: 0 15px;*/
 }
 
 address {
-    margin: 0 0 15px;
+/*    margin: 0 0 15px;*/
 }
 
 /*--------------------------------------------------------------
@@ -107,30 +107,30 @@ address {
 --------------------------------------------------------------*/
 
 a {
-    font-family: 'Source Sans Pro', sans-serif;
-    color: #606060;
-    background-color: transparent;
-    -webkit-transition: all 0.4s ease;
-    -moz-transition: all 0.4s ease;
-    -o-transition: all 0.4s ease;
-    transition: all 0.4s ease;
+/*    font-family: 'Source Sans Pro', sans-serif;*/
+/*    color: #606060;*/
+/*    background-color: transparent;*/
+/*    -webkit-transition: all 0.4s ease;*/
+/*    -moz-transition: all 0.4s ease;*/
+/*    -o-transition: all 0.4s ease;*/
+/*    transition: all 0.4s ease;*/
 }
 
 a:visited {
-    color: #000000;
+/*    color: #000000;*/
 }
 
 a:hover, a:focus, a:active {
-    color: #000000;
-    text-decoration: none;
+/*    color: #000000;*/
+/*    text-decoration: none;*/
 }
 
 a:focus {
-    outline: none !important;
+/*    outline: none !important;*/
 }
 
 a:hover, a:active {
-    outline: 0;
+/*    outline: 0;*/
 }
 
 
