--- a/css/style-1.css
+++ b/css/style-1.css
@@ -29,6 +29,11 @@ a{
 .menu-left ul li:not(:last-child) {
     margin-right: 20px;
 }
+.menu-center {
+    width: 200px;
+    text-align: center;
+    margin-left: -125px;
+}
 
 
 
