--- a/css/style-1.css
+++ b/css/style-1.css
@@ -1,130 +1,384 @@
 /*******Base CSS********/
-*{
-    margin: 0;
-    padding: 0;
-}
-h1,h2,h3,h4,h5,h6,a,p,ol,ul{
-    margin: 0;
-    padding: 0;
-}
-li{
-    list-style: none;
-}
-a, a:hover, a:visited, a:focus, a:active{
-    text-decoration: none;
-}
-.flex{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+    
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
 
-/*******Main CSS********/
-body{
-    font-size: 16px;
-}
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6,
+    a,
+    p,
+    ol,
+    ul {
+        margin: 0;
+        padding: 0;
+    }
 
-/*****Header-Area******/
-.header-area{
-    position: fixed;
-    z-index: 1;
-    left: 0;
-    top: 0;
-    width: 100%;
-}
-.navigation a{
-    color: #fff;
-}
-.mob-menu{
-    display: none;
-}
-.main-menu {
-    justify-content: space-between;
-    min-height: 50px;
-}
-.menu-left ul li:not(:last-child) {
-    margin-right: 20px;
-}
-.menu-left {
-    font-family: ProximaNova-Light;
-}
-.menu-left a:hover{
-    font-family: ProximaNova-Bold;
-}
-.menu-left li{
-    position: relative;
-}
-.menu-left li:after{
-    position: absolute;
-    left: 0;
-    top: -5px;
-    height: 5px;
-    width: 100%;
-    background-color: #54d154;
-    content: '';
-    display: none;
-}
-.menu-left li:hover:after{
-    display: block;
-}
-.menu-center {
-    width: 200px;
-    text-align: center;
-    margin-left: -125px;
-    font-family: NautilusPompilius;
-    font-size: 24px;
-}
-.menu-right{
-    font-family: proximanova-light;
-}
-input[type="search"] {
-    border: none;
-    background:none;
-}
-input[type="search"]:focus {
-    outline: none;
-    background-color:none;
-}
-.butn{
-    padding: 5px 15px;
-    border-radius: 50px;
-    background: rgba(255,255,255, .8);
-    color: #fff;
-}
-.search-butn{
-    color: #111;
-}
-.search-butn a{
-    color: #000;
-}
+    li {
+        list-style: none;
+    }
 
-/*****Hero-Area******/
-.hero-area{
-    background-image: url(../img/hero-bg.jpg);
-    background-size: cover;
-}
-.hero-text {
-    flex-direction: column;
-}
-.hero-text h1{
-    margin-top: 278px;
-    text-transform: capitalize;
-    color: #fff;
-    font-size: 55px;
-    font-family: Montserrat;
-    font-weight: 700;
-}
-.wrk-wth-us-butn{
-    margin-top: 42px;
-    padding: 15px 27px;
-    background-color:  #54d154;
-}
-.scrl-dwn-butn{
-    margin-top: 218px;
-    margin-bottom: 15px;
-    color: #000;
-}
+    a,
+    a:hover,
+    a:visited,
+    a:focus,
+    a:active {
+        text-decoration: none;
+    }
+
+    .flex {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 
 
+/********Main CSS**********/
+    
+    body {
+        font-size: 16px;
+        text-align: center;
+    }
+
+    .section-padding {
+        padding-top: 45px;
+        padding-bottom: 45px;
+    }
+
+    .section-title {
+        font-family: Montserrat;
+        font-weight: 300;
+        margin-bottom: 77px;
+    }
+
+    .section-title h4 {
+        font-size: 21px;
+        color: #828181;
+        position: relative;
+    }
+
+    .section-title h4:after {
+        height: 2px;
+        width: 40px;
+        left: 50%;
+        margin-left: -20px;
+        bottom: -4px;
+        position: absolute;
+        background: #828181;
+        content: '';
+    }
+
+    .section-title p {
+        font-size: 16px;
+        color: #b7b3b3;
+        margin-top: 12px;
+    }
+
+
+/*******Header-Area********/
+
+    .header-area {
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        background: rgba(0, 0, 0, .5);
+    }
+
+    .navigation a {
+        color: #fff;
+    }
+
+    .mob-menu {
+        display: none;
+    }
+
+    .main-menu {
+        justify-content: space-between;
+        min-height: 50px;
+    }
+
+    .menu-left ul li:not(:last-child) {
+        margin-right: 20px;
+    }
+
+    .menu-left a{
+        font-family: ProximaNova-Regular;
+    }
+
+    .menu-left a:hover {
+        font-family: ProximaNova-Bold;
+    }
+
+    .menu-left li {
+        position: relative;
+    }
+
+    .menu-left li:after {
+        position: absolute;
+        left: 0;
+        top: -14px;
+        height: 8px;
+        width: 100%;
+        background-color: #54d154;
+        content: '';
+        display: none;
+    }
+
+    .menu-left li:hover:after {
+        display: block;
+    }
+
+    .menu-center {
+        width: 200px;
+        text-align: center;
+        margin-left: -125px;
+        font-family: NautilusPompilius;
+        font-size: 24px;
+    }
+
+    input[type="search"] {
+        border: none;
+        background: none;
+    }
+
+    input[type="search"]:focus {
+        outline: none;
+        background-color: none;
+    }
+
+    .butn {
+        padding: 5px 15px;
+        border-radius: 50px;
+        background: rgba(255, 255, 255, .8);
+        color: #fff;
+    }
+
+    .search-butn {
+        color: #111;
+        font-family: proximanova-light;
+    }
+
+    .search-butn a {
+        color: #000;
+    }
+
+
+/********Hero-Area*********/
+
+    .hero-area {
+        background-image: url(../img/hero-bg.jpg);
+        background-size: cover;
+    }
+
+    .hero-text {
+        flex-direction: column;
+    }
+
+    .hero-text h1 {
+        margin-top: 278px;
+        text-transform: capitalize;
+        color: #fff;
+        font-size: 55px;
+        font-family: Montserrat;
+        font-weight: 700;
+    }
+
+    .wrk-wth-us-butn {
+        margin-top: 42px;
+        padding: 15px 27px;
+        background-color: #54d154;
+        font-family: ProximaNova-Regular;
+        font-size: 22px;
+    }
+
+    .scrl-dwn-butn {
+        margin-top: 218px;
+        margin-bottom: 15px;
+        color: #000;
+        font-family: ProximaNova-Light;
+    }
+
+
+/*****What-We-Do-Area******/
+
+    .wt-we-do-area {
+        background: #fff;
+    }
+
+    .wt-we-do-item {}
+
+    .single-wt-we-do-item {}
+
+
+    /* give margin-right to all child except 3,6,9...
+    .single-wt-we-do-item:not(:nth-child(3n+0)) {
+        margin-right: 114px;
+    }
+    */
+
+
+    /* remove margin-right from last-child
+    .single-wt-we-do-item:last-child {
+        margin-right: 0;
+    }
+    */
+
+
+    /* remove margin-bottom from last three child
+    .single-wt-we-do-item:nth-last-child(-n+3){
+        margin-bottom: 0;
+    }
+    */
+
+    .single-wt-we-do-item img {
+        padding: 35px 30px;
+        border-radius: 30px;
+        background: #e1f3e1;
+    }
+
+    .single-wt-we-do-item h4 {
+        font-family: ProximaNova-Bold;
+        font-size: 24px;
+        margin: 30px 0;
+    }
+
+    .single-wt-we-do-item p {
+        font-family: Montserrat;
+        font-weight: 300;
+    }
+
+    .lern-more-butn {
+        margin-top: 30px;
+        /* add margin-bottom if multiple row
+        margin-bottom: 70px;
+        */
+        background: #54d154;
+        display: inline-block;
+    }
+
+
+/***Our-Latest-Work-Area***/
+
+    .our-lt-wrk-area{
+        background-color: #54d154;
+    }
+    .our-lt-wrk-title h4{
+        color: #207b20;
+    }
+    .our-lt-wrk-title p{
+        color: #2b9b2b;
+    }
+    .our-lt-wrk-grid{
+        margin-top: 55px;
+        margin-bottom: 55px;
+    }
+/*
+    .our-lt-wrk-img{
+        display: inline-block;
+        margin-bottom: 31px;
+    }
+*/
+    
+/*
+    .our-lt-wrk-img:not(:nth-child(5n+0)){
+        margin-right: 31px;
+    }
+*/
+    
+/*
+    .our-lt-wrk-img:nth-last-child(-n+5){
+        margin-bottom: 0;
+    }
+*/
+    .vw-more-wrk-butn{
+        background: #2b9b2b;
+        font-family: ProximaNova-Regular;
+        font-size: 18px;
+        padding: 10px 20px;
+    }
+    /* ---- button ---- */
+
+    .button {
+      display: inline-block;
+      padding: 10px 18px;
+      margin-bottom: 10px;
+      background: #EEE;
+      border: none;
+      border-radius: 7px;
+      background-image: linear-gradient( to bottom, hsla(0, 0%, 0%, 0), hsla(0, 0%, 0%, 0.2) );
+      color: #222;
+      font-family: sans-serif;
+      font-size: 16px;
+      text-shadow: 0 1px white;
+      cursor: pointer;
+    }
+
+    .button:hover {
+      background-color: #8CF;
+      text-shadow: 0 1px hsla(0, 0%, 100%, 0.5);
+      color: #222;
+    }
+
+    .button:active,
+    .button.is-checked {
+      background-color: #28F;
+    }
+
+    .button.is-checked {
+      color: white;
+      text-shadow: 0 -1px hsla(0, 0%, 0%, 0.8);
+    }
+
+    .button:active {
+      box-shadow: inset 0 1px 10px hsla(0, 0%, 0%, 0.8);
+    }
+
+    /* ---- button-group ---- */
+
+    .button-group:after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+
+    .button-group .button {
+      float: left;
+      border-radius: 0;
+      margin-left: 0;
+      margin-right: 1px;
+    }
+
+    .button-group .button:first-child { border-radius: 0.5em 0 0 0.5em; }
+    .button-group .button:last-child { border-radius: 0 0.5em 0.5em 0; }
+
+    /* ---- isotope ---- */
+
+    .grid {
+      border: 1px solid #333;
+    }
+
+    /* clear fix */
+    .grid:after {
+      content: '';
+      display: block;
+      clear: both;
+    }
+
+    /* ---- .grid-item ---- */
+
+    .grid-item > * {
+      margin: 0;
+      padding: 0;
+    }
+    .grid-item{
+        width: 17%;
+    }
 /*******Media Query********/
-
