completed our happy client area

--- a/css/style-1.css
+++ b/css/style-1.css
@@ -271,10 +271,10 @@
     .our-lt-wrk-area{
         background-color: #54d154;
     }
-    .our-lt-wrk-title h4{
+    .our-lt-wrk-area-title h4{
         color: #207b20;
     }
-    .our-lt-wrk-title p{
+    .our-lt-wrk-area-title p{
         color: #2b9b2b;
     }
     .our-lt-wrk-grid{
