--- a/css/style-1.css
+++ b/css/style-1.css
@@ -529,4 +529,16 @@
     .wrk-wth-us-butn-area{
         background: #3eba3e;
     }
+
+
+/********Footer-Area*******/
+
+    .footer-area{
+        background: rgba(0, 0, 0, .5);
+    }
+
+    .footer-center-post-info {
+        flex-direction: column;
+        align-items: flex-start;
+    }
 /*******Media Query********/
