--- a/css/style-1.css
+++ b/css/style-1.css
@@ -251,15 +251,19 @@
     .our-lt-wrk-area{
         background-color: #54d154;
     }
+
     .our-lt-wrk-area-title h4{
         color: #207b20;
     }
+
     .our-lt-wrk-area-title h4:after {
         background: #207b20;
     }
+
     .our-lt-wrk-area-title p{
         color: #2b9b2b;
     }
+
     .our-lt-wrk-grid{
         margin-top: 55px;
         margin-bottom: 55px;
@@ -451,6 +455,18 @@
         padding-bottom: 0;
     }
 
+    .meet-the-tm-area-title h4{
+        color: #207b20;
+    }
+
+    .meet-the-tm-area-title h4:after {
+        background: #207b20;
+    }
+
+    .meet-the-tm-area-title p{
+        color: #2b9b2b;
+    }
+
     .meet-the-tm-item {
         flex-direction: column;
     }
@@ -465,23 +481,29 @@
     }
 
     .meet-the-tm-item span {
-        height: 95px;
+        height: 77px;
         border: 2px solid #207b20;
-        margin: 12px 0;
+        margin: 15px 0;
     }
+    
 
-    .meet-the-tm-butn{
-        margin-top: 12px;
-        padding: 4px 6px;
+    .meet-the-tm-item h4 {
+        color: #fff;
+    }
+    
+   .meet-the-tm-butn{
+        margin-top: 15px;
+        padding: 4px 5px;
+        background: #c5e9c5;
     }
 
     .meet-the-tm-butn a {
-        padding: 0 2px;
+        margin: 0 5px;
         font-size: 11px;
     }
 
     .meet-the-tm-butn i.fa.fa-dribbble {
-        color: red;
+        color: #ea4c89;
         font-size: 22px;
     }    
 
@@ -490,7 +512,7 @@
         height: 20px;
         width: 20px;
         border-radius: 50%;
-        color: #fff;
+        color: #c5e9c5;
     }
     .meet-the-tm-butn i.fa.fa-behance {
         background: #0061ff;
