--- a/css/style-1.css
+++ b/css/style-1.css
@@ -48,6 +48,14 @@
         font-family: ProximaNova-Regular;
     }
 
+    .butn {
+        padding: 5px 15px;
+        border-radius: 50px;
+        background: rgba(255, 255, 255, .8);
+        color: #fff;
+        text-transform: uppercase;
+    }
+
     .section-padding {
         padding-top: 45px;
         padding-bottom: 45px;
@@ -63,13 +71,14 @@
         font-size: 21px;
         color: #828181;
         position: relative;
+        text-transform: uppercase;
     }
 
     .section-title h4:after {
         height: 2px;
         width: 40px;
         left: 50%;
-        bottom: -4px;
+        bottom: -14px;
         position: absolute;
         background: #828181;
         content: '';
@@ -79,7 +88,7 @@
     .section-title p {
         font-size: 16px;
         color: #b7b3b3;
-        margin-top: 12px;
+        margin-top: 27px;
     }
 
 
@@ -156,13 +165,6 @@
         background-color: none;
     }
 
-    .butn {
-        padding: 5px 15px;
-        border-radius: 50px;
-        background: rgba(255, 255, 255, .8);
-        color: #fff;
-    }
-
     .search-butn {
         color: #111;
         font-family: proximanova-light;
@@ -231,6 +233,7 @@
         font-family: ProximaNova-Bold;
         font-size: 24px;
         margin: 30px 0 20px;
+        text-transform: capitalize;
     }
 
     .single-wt-we-do-item p {
@@ -530,7 +533,7 @@
 
     .wrk-wth-us-butn-area .wrk-wth-us-butn{
         font-family: ProximaNova-Light;
-        font-size: 22px;
+        font-size: 19px;
         box-shadow: 0px 5px 10px #38A937;
     }
 
@@ -544,23 +547,44 @@
         margin-top: 0;
     }
 
+    .footer-area p, a {
+        color: #ccc;
+    }
+
+    .footer-column h4 {
+        margin-bottom: 27px;
+        font-size: 16px;
+        color: #ddd;
+    }
+
+    .footer-column h4:after {
+        width: 30px;
+        color: #ddd;
+        bottom: -7px;
+    }
+
     .footer-left-title {
         flex-direction: column;
     }
 
     .footer-left-butn{
         padding: 4px 6px;
-        width: 23%;
-        margin-top: 28px;
+        margin-top: 32px;
+        background: #e6e7e6;
     }
 
-    .footer-column h4 {
+     .footer-center-post:not(:last-child) {
         margin-bottom: 20px;
     }
 
-    .footer-center-post {
-        margin-bottom: 12px;
+    .footer-center-post-img {
+        width: 55px;
     }
+
+    .footer-center-post-img img {
+        width: 100%;
+    }
+
 
     .footer-center-post-info {
         flex-direction: column;
@@ -570,10 +594,11 @@
 
     .footer-center-post-butn{
         margin-top: 8px;
-        padding: 5px 6px;
+        padding: 4px 7px;
         border-radius: 4px;
         font-size: 12.6px;
         font-family: montserrat;
+        color: #fff;
     }
 
     .fcp-butn-1{
@@ -601,18 +626,22 @@
     }
 
     .footer-contact-form{
-        margin-top: 30px;
-        border-radius: 5px;
+        margin-top: 27px;
     }
 
     .footer-contact-form>* {
         width: 100%;
-        padding: 14px 10px;
-        margin-bottom: 3px;
+        padding: 10px 14px;
         border: none;
         background: #444;
         color: #777;
+        height: 33px;
     }
+
+    .footer-contact-form>*:not(:last-child){
+        margin-bottom: 3px;
+    }
+
 
     .footer-contact-form input[type="text"] {
         border-radius: 10px 10px 0 0;
@@ -620,7 +649,8 @@
 
 
     .footer-contact-form textarea {
-        min-height: 132px;
+        height: 132px;
+        display: block;
     }
 
     .footer-contact-form .butn {
@@ -629,18 +659,21 @@
         color: #fff;
     }
 
-    .footer-area .container-fluid{
-        background: #222;
+   .footer-area .container-fluid{
+        background: #CCE;
     }
 
     .footer-logos{
         justify-content: space-around;
     }
 
+    .footer-logos-title h4{
+        color: #101010;
+    }
 
     .footer-copyright{
         justify-content: space-around;
-        background: #111111;
+        background: #111;
         color: #fff;
         padding: 8px 0;
     }
