--- a/New folder/css/style-1.css
+++ b/New folder/css/style-1.css
@@ -117,15 +117,14 @@
     }
 
     .menu-left ul li:not(:last-child) {
-        margin-right: 20px;
     }
 
     .menu-left a{
         font-family: ProximaNova-Regular;
+        padding: 18px 15px;
     }
 
     .menu-left a:hover {
-        font-family: ProximaNova-Bold;
     }
 
     .menu-left li {
@@ -153,6 +152,10 @@
         margin-left: -125px;
         font-family: NautilusPompilius;
         font-size: 24px;
+    }
+
+    .menu-center h3 {
+        padding: 12px 0px;
     }
 
     input[type="search"] {
